2006-06-19  Ethan A Merritt  <merritt@u.washington.edu>

	* src/plot3d.c (get_3ddata): After reading in the data points, check
	that the axis ranges are legal.  If the input data contains NaN or Inf
	then the axis scaling may fail.
	Bug #1490699.

2006-05-18  Bastian Maerkisch  <bmaerkisch@web.de>

	* src/win/wtext.c: Add mouse wheel scroll support for text window.

2006-06-18  Shigeharu Takeno  <shige@iee.niit.ac.jp>

	* docs/gnuplot-ja.doc docs/README.ja docs/term-ja.diff
	src/win/README.win-ja src/win/wgnuplot-ja.mnu:
	Sync Japanese documentation to recent changes in English files.

2006-06-18  Ethan A Merritt  <merritt@u.washington.edu>

	* src/show.c (show_version):  List additional configuration options.
	Make the show version output more compact (25 lines).

	* term/emf.trm (EMF_linetype EMF_dashtype): It is necessary to set the
	line color and dash type every time either is changed.
	Bugfix.

2006-06-17  Timothee Lecomte  <timothee.lecomte@ens.fr>

	* src/wxterminal/bitmaps/png/autoscale_png.h:
	* src/wxterminal/bitmaps/png/clipboard_png.h:
	* src/wxterminal/bitmaps/png/config_png.h:
	* src/wxterminal/bitmaps/png/grid_png.h:
	* src/wxterminal/bitmaps/png/help_png.h:
	* src/wxterminal/bitmaps/png/nextzoom_png.h:
	* src/wxterminal/bitmaps/png/previouszoom.h:
	* src/wxterminal/bitmaps/png/replot_png.h:
	New files containing the translation of the binary PNG files into
	C arrays to be included in the source code.

	* src/wxterminal/bitmaps/png/README.embedding:
	Text file briefly explaining the purpose of the embedded PNG files.

	* src/wxterminal/wxt_gui.cpp (wxtApp::OnInit): Remove the code to load
	the PNG files from standard paths (unreliable). Replace by the loading
	of the embedded files.
	(wxtPanel::UpdateModifiers): New routine to compare and update the
	state of the modifier keys as known by the core. It replaces the
	unreliable tracking of the press and release events. All wxMouseEvent
	and wxKeyEvent processing methods updated.